# Billboardcloud

./: .gitignore  BillboardCloud.sln  CMakeLists.txt  LICENSE  README.md
assets/objects/camera/: camera.mtl  camera_d.dds
assets/shaders/: bbRender.fs  camera.fs  floor.fs  floor.vs  imposterRender.fs  imposterRender.vs  imposterTextureGen.fs  imposterTextureGen.vs  skybox.fs  skybox.vs  tree1.fs
engine/3rd/assimp/dll/: assimp-vc142-mt.exp  assimp-vc142-mtd.exp
engine/3rd/assimp/lib/: assimp-vc142-mtd.lib
engine/src/bbc/: billboardclouds.h  bin.h  boundingsphere.h  cluster.h
engine/src/core/: debug.h  mesh.h  model.h  shader.h  texture.h  viewer.h
engine/src/math/: linearalgebra.h  randseed.h  spherepointsampling.h
engine/src/object/: quad.h  text.h
includes/: stb_rect_pack.h
lib/: assimp.lib
src/: BillboardCloud.vcxproj  BillboardCloud.vcxproj.filters  main.cpp
src/IBR/: billboard.h  boundingsphere.h  discretization.h  imposter.h  plane.h  rectangle.h  triangle.h
src/core/: camera.h  config.h  glfw.h  shader.h  texture.h  viewer.h
src/math/: linearalgebra.h  rotatingcalipers.h
src/object/: floor.h  object.h  skybox.h
src/shaders/: bbRender.vs  bbTextureGen.vs  nanosuit.fs  text.vs  tree1.vs
